Fix BTable sort icons dark mode support
- Add dark mode SVG icon variants with light colors (#dee2e6)
- Add CSS rules for prefers-color-scheme: dark media query
- Add CSS rules for [data-bs-theme="dark"] selector
- Replace currentColor with explicit colors for both light and dark modes
- Fixes regression from #2924 and #2933

--- a/packages/bootstrap-vue-next/src/components/BTable/_table.scss
+++ b/packages/bootstrap-vue-next/src/components/BTable/_table.scss
@@ -177,9 +177,15 @@ $b-table-sort-icon-bg-width: 1.5em !default;
 $b-table-sort-icon-bg-height: 1.5em !default;
 
 // Sort icon SVGs (arrows matching the current SortIcon component)
-$b-table-sort-icon-bg-not-sorted: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='currentColor' viewBox='0 0 16 16'><path fill-rule='evenodd' opacity='0.4' d='M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z'/></svg>") !default;
-$b-table-sort-icon-bg-ascending: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='currentColor' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z'/></svg>") !default;
-$b-table-sort-icon-bg-descending: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='currentColor' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z'/></svg>") !default;
+// Light mode icons - dark fill
+$b-table-sort-icon-bg-not-sorted: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23212529' viewBox='0 0 16 16'><path fill-rule='evenodd' opacity='0.4' d='M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z'/></svg>") !default;
+$b-table-sort-icon-bg-ascending: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23212529' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z'/></svg>") !default;
+$b-table-sort-icon-bg-descending: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23212529' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z'/></svg>") !default;
+
+// Dark mode icons - light fill
+$b-table-sort-icon-bg-not-sorted-dark: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23dee2e6' viewBox='0 0 16 16'><path fill-rule='evenodd' opacity='0.4' d='M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z'/></svg>") !default;
+$b-table-sort-icon-bg-ascending-dark: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23dee2e6' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z'/></svg>") !default;
+$b-table-sort-icon-bg-descending-dark: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23dee2e6' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z'/></svg>") !default;
 
 .table th {
   &.b-table-sortable-column {
@@ -230,6 +236,68 @@ $b-table-sort-icon-bg-descending: url("data:image/svg+xml,<svg xmlns='http://www
     }
   }
 
+  // Dark mode icon overrides
+  @media (prefers-color-scheme: dark) {
+    > thead,
+    > tfoot {
+      > tr {
+        > [aria-sort="none"] {
+          background-image: var(
+            --bvn-sort-icon-none,
+            bv-escape-svg($b-table-sort-icon-bg-not-sorted-dark)
+          );
+        }
+
+        > [aria-sort="ascending"] {
+          background-image: var(
+            --bvn-sort-icon-asc,
+            bv-escape-svg($b-table-sort-icon-bg-ascending-dark)
+          );
+        }
+
+        > [aria-sort="descending"] {
+          background-image: var(
+            --bvn-sort-icon-desc,
+            bv-escape-svg($b-table-sort-icon-bg-descending-dark)
+          );
+        }
+      }
+    }
+  }
+}
+
+// Dark mode icon overrides for explicit [data-bs-theme="dark"]
+[data-bs-theme="dark"] {
+  .table.b-table:not(.b-table-no-sort-icon) {
+    > thead,
+    > tfoot {
+      > tr {
+        > [aria-sort="none"] {
+          background-image: var(
+            --bvn-sort-icon-none,
+            bv-escape-svg($b-table-sort-icon-bg-not-sorted-dark)
+          );
+        }
+
+        > [aria-sort="ascending"] {
+          background-image: var(
+            --bvn-sort-icon-asc,
+            bv-escape-svg($b-table-sort-icon-bg-ascending-dark)
+          );
+        }
+
+        > [aria-sort="descending"] {
+          background-image: var(
+            --bvn-sort-icon-desc,
+            bv-escape-svg($b-table-sort-icon-bg-descending-dark)
+          );
+        }
+      }
+    }
+  }
+}
+
+.table.b-table:not(.b-table-no-sort-icon) {
   // Padding adjustment for small tables
   &.table-sm:not(.b-table-no-sort-icon) {
     > thead,
